Updated name, corrected typo in help documentation

--- a/release/fv/fv_kwakwala/source/fv_kwakwala_kmw_help.htm
+++ b/release/fv/fv_kwakwala/source/fv_kwakwala_kmw_help.htm
@@ -21,7 +21,7 @@ li {font-size: medium; margin-bottom: 5px; font-family: "Aboriginal Sans"; }
 							<strong>k̕w</strong> is typed <strong>k</strong> then <strong>]</strong> then <strong>w</strong></li>
 						<li>To type the underline accent use the <strong>semicolon key ;</strong><br />
 							<strong>ḵ</strong> is typed <strong>k</strong> then <strong>;</strong></li>
-						<li>To type the slash-ł use the <strong>left bracket key ]</strong></li>
+						<li>To type the slash-ł use the <strong>left bracket key [</strong></li>
 						<li>All changed punctuation can type their original value by holding down the Right-Alt or Option key. To get the original value of the left-bracket [ type Right-Alt+Left-Bracket (Windows) Option+Left-Bracket (Mac).</li>
 						<ul>
 							<li>
