--- a/release/fv/fv_kwakwala/source/welcome/welcome.htm
+++ b/release/fv/fv_kwakwala/source/welcome/welcome.htm
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Kwakwalạ</title>
+  <title>Kwak̕wala</title>
 
 <style type="text/css"> <!--
 li {font-size: medium; margin-bottom: 5px; font-family: "Aboriginal Sans"; }
@@ -31,7 +31,7 @@ a:active {	color: rgb(102,117,184); text-decoration:none;}
 								<strong>k̓</strong> is typed <strong>k</strong> then <strong>/</strong></li>
 						<li>To type the glottalized accent when it appears between two letters use the <strong>right bracket key ]</strong><br /> <strong>k̕w</strong> is typed <strong>k</strong> then <strong>]</strong> then <strong>w</strong></li>
 						<li>To type the underline accent use the <strong>semicolon key ;</strong><br /> <strong>ḵ</strong> is typed <strong>k</strong> then <strong>;</strong></li>
-						<li>To type the slash-ł use the <strong>left bracket key ]</strong></li>
+						<li>To type the slash-ł use the <strong>left bracket key [</strong></li>
 						<li>All changed punctuation can type their original value by holding down the Right-Alt or Option key. To get the original value of the left-bracket [ type Right-Alt+Left-Bracket (Windows) Option+Left-Bracket (Mac).</li>
               <ul>
                   <li><b>NOTE</b>: To type / while using Google Drive, use <strong>shift</strong>, <strong>Right-Alt</strong>, then <strong>Slash /</strong></li>
