--- a/release/sil/sil_cham_phonetic/source/readme.htm
+++ b/release/sil/sil_cham_phonetic/source/readme.htm
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Cham (SIL)</title>
+  <title>Cham Phonetic (SIL)</title>
   <style type="text/css">
     p { font: 10pt Tahoma; }
     h1 { font: bold 16pt Tahoma; color: #4444cc; margin-bottom: 2px }
@@ -12,7 +12,7 @@
 </head>
 <body>
 
-<h1>Cham (SIL)</h1>
+<h1>Cham Phonetic (SIL)</h1>
 
 <p>
   This keyboard is for the Eastern Cham language using the Cham script. It is loosely based on a phonetic layout. Feedback is most welcome.
