--- a/release/sil/sil_khmer/source/welcome/welcome.htm
+++ b/release/sil/sil_khmer/source/welcome/welcome.htm
@@ -18,23 +18,127 @@
 </p>
 
   <h2>Keyboard layout</h2>
-  <p>The layouts below output all the characters in this keyboard. However, there are alternate methods to access the same keys with other keystrokes. Some of these are described below.</p>
-  <p>All "feet" are accessible through first typing ";" and then the letter for which the foot is desired.</p>
-  <p>Typing "b" followed by "a" or "A" automatically produces the "បា" and "បៅ" respectively.</p>
-	<p>The symbols of the moon calendar (with 2 symbols on top of each other) can also be typed by typing the numbers plus type ">" two times.  E.g. typing "0", "8", ">", and ">" will give the same symbol as Ctrl-Alt-Shift-`. 
-  E.g. typing "1", "0", ">", and ">" will give the same symbol as Ctrl-Alt-Shift-0.</p>
+  <p>The layouts below output all the characters in this keyboard. However, there are alternate methods to access the same keys with other keystrokes. Some of these are described below:</p>
+    <ul>
+      <li><p>All "feet" are accessible through first typing ";" and then the letter for which the foot is desired.</p></li>
+      <li><p>Typing "b" followed by "a" or "A" automatically produces the "បា" and "បៅ" respectively.</p></li>
+	    <li><p>The symbols of the moon calendar (᧠, ᧪...) can also be typed.</p>
+      <ul>
+          <li><p>For computers: typing the numbers with ">" two times. For example:</p>
+                <ol>
+                  <li><p>Typing <kbd>0</kbd> + <kbd>8</kbd> + <kbd>></kbd> and <kbd>></kbd> will give the same symbol as Ctrl-Alt-Shift-`.</p></li>
+                  <li><p>Typing <kbd>1</kbd> + <kbd>0</kbd> + <kbd>></kbd> and <kbd>></kbd> will give the same symbol as Ctrl-Alt-Shift-0.</p></li>
+                </ol>
+            </li>
+        </ul>
+      </li>
+    </ul>
+  <p>Many of the alternate characters and a few vowels can be accessed by typing one or more <ins>commas</ins> (<kbd>,</kbd>) after the initial keystroke. 
+    <br>To get arabic numbers type first the Khmer number, then a comma. A further comma will result in a lesser used type of number in Khmer, a third comma will revert the symbol to the Khmer number.
+    Many of the symbols, vowels, independent vowels, and diacritics work this way. For example:</p>
+    <ul>
+    <li><p>Start with <kbd>\</kbd> , or type <kbd>ឮ</kbd> for mobile, produces "ឮ":
+      <ul>
+        <li><p><kbd>ឮ</kbd> + <kbd>,</kbd> produces "ឭ" </p></li>
+        <li><p><kbd>ឭ</kbd> + <kbd>,</kbd> produces "ឰ". </p></li>
+        <li><p><kbd>ឰ</kbd> + <kbd>,</kbd> produces "ឮ". </p></li>
+      </ul>
+    </li>
+    <li><p>Typing <kbd>{</kbd> , type <kbd>ឪ</kbd> for mobile, produces "ឪ":</p>
+      <ul>
+        <li><p><kbd>ឪ</kbd> + <kbd>,</kbd> produces "ឱ" </p></li>
+        <li><p><kbd>ឱ</kbd> + <kbd>,</kbd> produces "ឳ". </p></li>
+        <li><p><kbd>ឳ</kbd> + <kbd>,</kbd> produces "ឪ". </p></li>
+      </ul>
+    </li>
+    <li>
+      <p>The same logic applies to ឥ or type "}": ឥ ឯ ឧ</p>
+    <ul>
+        <li><p><kbd>ឥ</kbd> + <kbd>,</kbd> produces "ឯ" </p></li>
+        <li><p><kbd>ឯ</kbd> + <kbd>,</kbd> produces "ឧ". </p></li>
+        <li><p><kbd>ឧ</kbd> + <kbd>,</kbd> produces "ឥ". </p></li>
+      </ul>
+    </li>
+    <li>
+      <p>The same logic applies to ឬ or type "|": ឬ ឫ ឩ</p>
+      <ul>
+          <li><p><kbd>ឬ</kbd> + <kbd>,</kbd> produces "ឫ" </p></li>
+          <li><p><kbd>ឫ</kbd> + <kbd>,</kbd> produces "ឩ". </p></li>
+          <li><p><kbd>ឩ</kbd> + <kbd>,</kbd> produces "ឬ". </p></li>
+        </ul>
+      </li>
+    <li>
+      <p>The same logic applies to Khmer Sign Avakrahasanya ៜ:</p>
+      <ul>
+        <li><p><kbd>ៜ</kbd> + <kbd>,</kbd> produces "ឨ". </p></li>
+        <li><p><kbd>ឨ</kbd> + <kbd>,</kbd> produces "អា". </p></li>
+        <li><p><kbd>អា</kbd> + <kbd>,</kbd> produces "ៜ". </p></li>
+      </ul>
+    </li>
+    <li>
+      <p>The same logic applies to ឲ្យ or type "[": ឲ្យ ឲ</p>
+      <ul>
+          <li><p><kbd>ឲ្យ</kbd> + <kbd>,</kbd> produces "ឲ" </p></li>
+        </ul>
+      </li>
+    <li>
+      <p>On the keyboard, there is a ខ្ញុំ key that applies the same logic to get ឦ or type "]":</p>
+      <ul>
+          <li><p><kbd>ខ្ញុំ</kbd> + <kbd>,</kbd> produces "ឦ" </p></li>
+      </ul>
+    </li>
+    <li>
+      <p>The same logic applies to ។ or type ">": ។ ៕ ៚ ៘</p>
+      <ul>
+          <li><p><kbd>។</kbd> + <kbd>,</kbd> produces "៕" </p></li>
+          <li><p><kbd>៕</kbd> + <kbd>,</kbd> produces "៚". </p></li>
+          <li><p><kbd>៚</kbd> + <kbd>,</kbd> produces "៘". </p></li>
+          <li><p><kbd>៘</kbd> + <kbd>,</kbd> produces "។". </p></li>
+        </ul>
+      </li>
+    <li>
+      <p>The same logic applies some vowels such as: ា ​េាះ  ៃ</p>
+      <ul>
+        <li><p><kbd>ា</kbd> + <kbd>,</kbd> produces "ោ" (not the same as <kbd>េ</kbd> + <kbd>ា</kbd>)</p></li>
+        <li><p><kbd>ោ</kbd> + <kbd>,</kbd> produces <i>U+17B5</i> "◌឵". </p></li>
+        <li><p><kbd>◌឵</kbd> + <kbd>,</kbd> produces <i>U+17B4</i> "◌឴". </p></li>
+        <li><p><kbd>◌</kbd> + <kbd>,</kbd> produces "឴ា". </p></li>
+        <li><p><kbd>េ</kbd> + <kbd>,</kbd> produces "ៃ". </p></li>
+      </ul>
+    </li>
+    <li>
+      <p>To output េាះ correctly, you must use it with a consonant. First choose a consonant to your liking then:</p>
+      <ul>
+        <li><p><kbd>ា</kbd> + <kbd>,</kbd> produces "ោ" </p></li>
+        <li><p><kbd>ះ</kbd> + <kbd>,</kbd> produces "ោះ", if not it will produce as seperate vowels. </p></li>
+      </ul>
+    </li>
+    <li>
+      <p>The same logic applies most of the diacritics such as: ័  ៍  ៏  ៌</p>
+      <ul>
+        <li><p><kbd>័</kbd> + <kbd>,</kbd> produces " ៌". </p></li>
+        <li><p><kbd>឵ ៌឵</kbd> + <kbd>,</kbd> produces "័឴". </p></li>
+        <li><p><kbd> ៍</kbd> + <kbd>,</kbd> produces "឴ ៏". </p></li>
+        <li><p><kbd> ៏</kbd> + <kbd>,</kbd> produces "៍". </p></li>
+      </ul>
+    </li>
+    <li><p>Typing "(" or ")" followed by one or more commas will give different kinds of braces "( ​[ ​{ ​<​".</p></li>
+    <li><p>Typing "/" followed by one or more commas will give different kinds of punctuation "\ ​.​ ,​".</p></li>
+    <li><p>Typing single quote <kbd>'</kbd> followed by one or more commas will output "◌ ៊ “ «", and typing double quote <kbd>"</kbd> followed by one or more commas will output "◌៊ “ «".</p></li>
+    <li>
+      <p>Other symbols such as: ៙ ៓ and more!</p>
+      <ul>
+        <li><p><kbd>*</kbd> + <kbd>,</kbd> produces " ៙". </p></li>
+        <li><p><kbd>឵៙</kbd> + <kbd>,</kbd> produces "|". </p></li>
+        <li><p><kbd>឵|</kbd> + <kbd>,</kbd> produces "*". </p></li>
+        <li><p><kbd>~</kbd> + <kbd>,</kbd> produces "឴  ៓". </p></li>
+        <li><p><kbd> ៓</kbd> + <kbd>,</kbd> produces "~". </p></li>
+      </ul>
+    </li>
+  </ul>
+  <p>Experiment using commas with other keys to see what we haven't covered yet.</p>
 
-  <p>Many of the alternate characters can be accessed by typing one or more commas after the initial keystroke.</p>
-	<p>To get arabic numbers type first the Khmer number, then a comma. A further comma will result in a lesser used type of number in Khmer, a third comma will revert the symbol to the Khmer number.</p>
-  <p>Many of the symbols, vowels, independent vowels, and diacritics work this way. For example "\" produces "ឮ", "\," produces "ឭ", and "\,," produces "ឰ". </p>
-  <p>Typing "{" followed by one or more commas will output "ឪ ឱ ឲ".</p>
-  <p>Typing "}" followed by one or more commas will output "ឥ ឯ ឳ".</p>
-  <p>Typing "|" followed by one or more commas will output "ឬ ឫ ឩ".</p>
-  <p>Typing "(" or ")" followed by one or more commas will give different kinds of braces "(​[​{​<​".</p>
-  <p>Typing "/" followed by one or more commas will give different kinds of punctuation "\​.​,​".</p>  
-  <p>Typing single quote (') followed by one or more commas will output "◌ ៊ “ «", and typing double quote (") followed by one or more commas will output "◌៊ “ «".</p>
-  <p>Typing ">" followed by one or more commas will output "។ ​៕ ​៚".</p>
-
+  <h2>Desktop layouts</h2>
   <h3>Default (unshifted)</h3>
 	<p><a href="LayoutU_.png"><img class="keyboard" src="LayoutU_.png" alt="Default (unshifted) state" /></a></p>
 	<h3>Shift</h3>
@@ -49,8 +153,13 @@
 	<p><a href="LayoutU_CA.png"><img class="keyboard" src="LayoutU_CA.png" alt="CTRL ALT (unshifted) state" /></a></p>
 	<h3>CTRL ALT Shift</h3>
 	<p><a href="LayoutU_SCA.png"><img class="keyboard" src="LayoutU_SCA.png" alt="CTRL ALT Shift state" /></a></p>
+  <h2>Touch layouts</h2>
+  <h3>Default (unshifted)</h3>
+	<p><a href="M_1.png"><img class="keyboard" src="M_1.png" alt="Default (unshifted) state" /></a></p>
+  <h3>Shift</h3>
+	<p><a href="M_2.png"><img class="keyboard" src="M_2.png" alt="Shift state" /></a></p>
 
-<p>© 2002-2019 SIL International</p>
+  <p>© 2002-2024 SIL International</p>
 
 </body>
 </html>
