--- a/release/sil/sil_khmer/source/welcome/welcome.htm
+++ b/release/sil/sil_khmer/source/welcome/welcome.htm
@@ -68,7 +68,7 @@
   </p>
   <ul>
     <li>
-      <p>Start with <kbd>\</kbd> , or type <kbd>ឮ</kbd> for mobile, produces "ឮ":
+      <p>Start with <kbd>\</kbd> , or type <kbd>ឮ</kbd> on mobile, produces "ឮ":
       <ul>
         <li>
           <p><kbd>ឮ</kbd> + <kbd>,</kbd> produces "ឭ" </p>
@@ -82,7 +82,7 @@
       </ul>
     </li>
     <li>
-      <p>Typing <kbd>{</kbd> , type <kbd>ឪ</kbd> for mobile, produces "ឪ":</p>
+      <p>Typing <kbd>{</kbd> , on mobile type <kbd>ឪ</kbd> for mobile, produces "ឪ":</p>
       <ul>
         <li>
           <p><kbd>ឪ</kbd> + <kbd>,</kbd> produces "ឱ" </p>
@@ -168,7 +168,7 @@
       </ul>
     </li>
     <li>
-      <p>The same logic applies some vowels such as: ា ​េាះ ៃ</p>
+      <p>The same logic applies some vowels such as: ា ​េា  ៃ</p>
       <ul>
         <li>
           <p><kbd>ា</kbd> + <kbd>,</kbd> produces "ោ" (not the same as <kbd>េ</kbd> + <kbd>ា</kbd>)</p>
