--- a/release/fv/fv_shashishalhem/source/welcome/welcome.htm
+++ b/release/fv/fv_shashishalhem/source/welcome/welcome.htm
@@ -24,16 +24,10 @@ a:active {	color: rgb(102,117,184); text-decoration:none;}
      
     <h2><img src="Shashishalhem.png" alt="" height="198" width="514" border="0" /></h2>
 					<ul>
-						<li>All accents are typed after the base character: á is typed a then Semicolon ;</li>
-						<li>To type the acute accent use the Semicolon key ; — é is typed e then Semicolon ;</li>
-						<li>All changed punctuation can type their original value by holding down the Right-Alt or Option key. The Semicolon ; is typed Right-Alt+Semicolon (Windows) Option+Semicolon (Mac).</li>
-						<li>Opening and closing quotes. For Mac users, Right-Alt is either of the Option Keys.</li>
-						<ul>
-									<li>single: ‘ Backquote — ’ Apostrophe</li>
-									<li>double: “ Shift+Hyphen — ” Shift+Equals</li>
-									<li>single ‹ Right-Alt+Shift+9 — › Right-Alt+Shift+0</li>
-									<li>double « Right-Alt+9 — » Right-Alt+0</li>
-								</ul>
+						<li>All accents are typed after the base character: á is typed a then Backquote key ` (next to the 1 key)</li>
+						<li>To type the acute accent use the Semicolon key ; — é is typed e then Backquote key `</li>
+						<li>All changed punctuation can type their original value by holding down the Right-Alt or Option key. The Backquote key ` is typed Right-Alt+Backquote (Windows) Option+Backquote (Mac).</li>
+						
 						<h2>Unicode Fonts</h2>
 						<p>The following fonts have been installed on your computer: <strong>Aboriginal Sans, Aboriginal Serif.</strong> Please use these fonts when typing in your language as they have been specially built to represent your language as accurately as possible. </p>
     <h3><a href="http://www.languagegeek.com/font/fontdownload.html">Download the latest version of Aboriginal Sans and Aboriginal Serif</a></h3>
