--- a/release/fv/fv_nlakapamuxcheen/source/welcome/welcome.htm
+++ b/release/fv/fv_nlakapamuxcheen/source/welcome/welcome.htm
@@ -22,7 +22,7 @@ a:active {	color: rgb(102,117,184); text-decoration:none;}
   <tr>
     <td colspan="2"><a href="http://www.firstvoices.com"><img src="FVLogo.gif" width="200" height="48" border="0" /></a>
      
-    <h2><img src="fv_nlakapamuxcheenU_.png" alt="" height="198" width="514" border="0" /></h2>
+    <h2><img src="fv_nlakapamuxcheen_U_.png" alt="" height="198" width="514" border="0" /></h2>
 					<ul>
 						<li>The lowline has been assigned to the <b>underscore key _</b> (shift+hyphen key). To type the regular underscore, hold down the Right-Alt or Option key then press shift + hyphen key.</li>
 						<li>To type <b>g̲</b>, type <b>g + _ </b></li>
