fv_shashishalhem - added single curly apostrophe

--- a/release/fv/fv_shashishalhem/source/welcome/welcome.htm
+++ b/release/fv/fv_shashishalhem/source/welcome/welcome.htm
@@ -25,7 +25,7 @@ a:active {	color: rgb(102,117,184); text-decoration:none;}
     <h2><img src="Shashishalhem.png" alt="" height="198" width="514" border="0" /></h2>
 					<ul>
 						<li>All accents are typed after the base character: á is typed a then Backquote key ` (next to the 1 key)</li>
-						<li>To type the acute accent use the Semicolon key ; — é is typed e then Backquote key `</li>
+						<li>To type the acute accent use the Backquote key ` — é is typed e then Backquote key `</li>
 						<li>All changed punctuation can type their original value by holding down the Right-Alt or Option key. The Backquote key ` is typed Right-Alt+Backquote (Windows) Option+Backquote (Mac).</li>
 						
 						<h2>Unicode Fonts</h2>
