--- a/release/fv/fv_gitsenimx/source/readme.htm
+++ b/release/fv/fv_gitsenimx/source/readme.htm
@@ -6,7 +6,7 @@
 </head>
 <body>
 
-<h1>Gitsenimx̱ Keyboard</h1>
+<h1>Gitxsanimx̱-Gitsenimx̱-Gyaanimx̱ Keyboard</h1>
 
 <p>This keyboard is designed for the Gitxsanimx̱-Gitsenimx̱-Gyaanimx̱ language of the BC Coast region of Canada. This is part of a set of keyboards from FirstVoices.</p>
 
