Updated terminology used in documentation, bumped version and year

--- a/release/fv/fv_plains_cree/source/welcome/welcome.htm
+++ b/release/fv/fv_plains_cree/source/welcome/welcome.htm
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>ᓀᐦᐃᔭᐍᐏᐣ (Plains Cree Syllabics) Keyboard Layout</title>
+  <title>ᓀᐦᐃᔭᐍᐏᐣ (Plains Cree Spirit Markers / Syllabics) Keyboard Layout</title>
 
 <style type="text/css"> <!--
 li {font-size: medium; margin-bottom: 5px; font-family: "Aboriginal Sans"; }
@@ -25,12 +25,12 @@ a:active {	color: rgb(102,117,184); text-decoration:none;}
     <h2><img src="plains_creeU_.png" alt="ᓀᐦᐃᔭᐍᐏᐣ" width="514" height="198" /></h2>
 					 
 <ul>
-	<li>The syllabics used to write ᓀᐦᐃᔭᐍᐏᐣ (Plains Cree) are typed by entering their Long Vowel equivalents.
+	<li>The Spirit Markers / syllabics used to write ᓀᐦᐃᔭᐍᐏᐣ (Plains Cree) are typed by entering their Long Vowel equivalents.
 		<ul>
 			<li><b>ᓀᐦᐃᔭᐍᐏᐣ</b> would be typed as <b>'nehiyawewin'</b></li>
 		</ul>
 	</li>
-	<li>In the case of syllables with multiple syllable finals, type the <b>left bracket key [ </b> to keep the syllables separate
+	<li>In the case of Spirit Markers / syllables with multiple finals, type the <b>left bracket key [ </b> to keep the Spirit Markers / syllables separate
 		<ul>
 			<li><b>ᐸᐦᐠᐍᓯᑲᐣ</b> would be typed <b>'pahk[wesikan'</b></li>
 			<li>The narrow no-break space is typed <b>shift+space</b></li>
