Corrected typo in Haíɫzaqvḷa documentation
Changed name to correct spelling across documentation, bumped version number, updated history

--- a/release/fv/fv_hailzaqvla/source/welcome.htm
+++ b/release/fv/fv_hailzaqvla/source/welcome.htm
@@ -2,14 +2,14 @@
 <html lang="en">
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Start Using the Háiɫzaqvḷa Keyboard</title>
+  <title>Start Using the Haíɫzaqvḷa Keyboard</title>
     <link rel="stylesheet" href="style.css" type="text/css" />
 </head>
 <body>
 
-<h1>Start Using the Háiɫzaqvḷa Keyboard</h1>
+<h1>Start Using the Haíɫzaqvḷa Keyboard</h1>
 
-<p>This keyboard is designed for the Háiɫzaqvḷa language of the BC Coast region of Canada. This is part of a set of keyboards from FirstVoices.</p>
+<p>This keyboard is designed for the Haíɫzaqvḷa language of the BC Coast region of Canada. This is part of a set of keyboards from FirstVoices.</p>
 
 
 <h2>Keyboard Layout (Desktop)</h2>
