--- a/release/fv/fv_hailzaqvla/source/readme.htm
+++ b/release/fv/fv_hailzaqvla/source/readme.htm
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
   <meta charset="utf-8">
-  <title>Háiɫzaqvḷa Keyboard</title>
+  <title>Haíɫzaqvḷa Keyboard</title>
     <link rel="stylesheet" href="style.css" type="text/css" />
 </head>
 <body>
 
-<h1>Háiɫzaqvḷa Keyboard</h1>
+<h1>Haíɫzaqvḷa Keyboard</h1>
 
-<p>This keyboard is designed for the Háiɫzaqvḷa language of the BC Coast region of Canada. This is part of a set of keyboards from FirstVoices.</p>
+<p>This keyboard is designed for the Haíɫzaqvḷa language of the BC Coast region of Canada. This is part of a set of keyboards from FirstVoices.</p>
 
 </body>
 </html>
