--- a/release/fv/fv_ojibwa/source/welcome/welcome.htm
+++ b/release/fv/fv_ojibwa/source/welcome/welcome.htm
@@ -38,9 +38,9 @@ a:active {	color: rgb(102,117,184); text-decoration:none;}
 				</ul>
 			<li>To add the w-dot, type the w after the first consonant</li>
 				<ul>
-					</li><b>ᐃᒃᐧᐁ</b> is typed <b>ikwe</b> or <b>igwe</b>
+					<li><b>ᐃᒃᐧᐁ</b> is typed <b>ikwe</b> or <b>igwe</b></li>
 				</ul>
-			<li>The syllabics sets for sh- / zh- (ᔐᔑᔓᔕᔥ), ch- (ᒉᒋᒍᒐᒡ), and th- (ᕞᕠᕤᕦᕪ) are typed by SHIFT+ the first letter of each sound (s, z, and t)</li>
+			<li>The syllabics sets for sh- / zh- (ᔐᔑᔓᔕᔥ), ch- (ᒉᒋᒍᒐᒡ), and th- (ᕞᕠᕤᕦᕪ) are typed by SHIFT + the first letter of each sound (s, z, and t)</li>
 				<ul>
 					<li><b>ᐊᓂᔑᓇᐯᒧᐎᓐ</b> is typed <b>aniSinabemowin</b> or <b>aniSinapemowin</b></li>
 					<li><b>ᒌᒫᓐ</b> (pointed) is typed <b>Ciimaan</b> or <b>jiimaan</b></li>
@@ -56,22 +56,26 @@ a:active {	color: rgb(102,117,184); text-decoration:none;}
 			<li><b>ᐊᓂᔥ ᐁᔥᓂᑲᔅᔾᐃᓐ</b> (unpointed) is typed <b>aniZ eZnikazy[in</b> or <b>aniS eSnigasy[in</b></li>
 		</ul>
 	</li>
-	<li>Punctuation</li>
-		<ul>	
-			<li>A standalone above dot indicating vowel length can be typed with the Backquote key `</li>
-			<li>A standalone w-dot can be typed with the q key.</li>
-				<ul><b>NOTE:</b> the dot indicating a long vowel and the w-dot do not need to be typed for the majority of syllables on the keyboard. They are provided as an option for syllables that do not have a single character that contains the syllable and one or both dots, ie; ᐧᕙ</li>
-				</ul>
-			<li><b>᙮</b> is typed with the period key .</li>
-			<li>single guillement: ‹ Right-Alt+Semicolon key ; — › Right-Alt+Quote '</li>
-			<li>double guillemets: « Shift+Right-Alt+Semicolon key ; — » Shift+Right-Alt+Quote '</li>
-			<li>Any modified punctuation can be typed using <b>Right-Alt</b>(Windows) or <b>Option</b>(Mac) + the original key</li>
-				<ul>
-					<li><b>.</b> is typed Right-Alt / Option +Period key . </li>
-					<li><b>-</b> is typed Right-Alt / Option +Hyphen key -</li>
-					<li><b>+</b> is typed Shift+Right-Alt / Option +Equal key =</li>
-				</ul>
-		</ul>
+	<p></p>
+
+<h2>Punctuation</h2>
+		<li>A standalone above dot indicating vowel length can be typed with the Backquote key `</li>
+		<li>A standalone w-dot can be typed with the q key.</li>
+			<ul>
+				<li><b>NOTE:</b> the dot indicating a long vowel and the w-dot do not need to be typed for the majority of syllables on the keyboard. They are provided as an option for syllables that do not have a single character that contains the syllable and one or both dots, ie; ᐧᕙ</li>
+			</ul>
+		<li><b>᙮</b> is typed with the period key .</li>
+		<li>single guillement: ‹ Right-Alt+Semicolon key ; — › Right-Alt+Quote '</li>
+		<li>double guillemets: « Shift+Right-Alt+Semicolon key ; — » Shift+Right-Alt+Quote '</li>
+		<li>Any modified punctuation can be typed using <b>Right-Alt</b>(Windows) or <b>Option</b>(Mac) + the original key</li>
+			<ul>
+				<li><b>.</b> is typed Right-Alt / Option + Period key . </li>
+				<li><b>-</b> is typed Right-Alt / Option + Hyphen key -</li>
+				<li><b>+</b> is typed Shift+Right-Alt / Option + Equal key =</li>
+			</ul>
+		<li>All English letters can be typed by pressing <b>Right-Alt / Option </b> followed by the letter(s) you wish to type</li>
+		<li>All uppercase English letters can be typed by pressing <b>Right-Alt / Option</b> followed by the letter(s) you wish ty type</li>
+
 		<h2>Unicode Fonts</h2>
 						<p>The following fonts have been installed on your computer: <strong>Aboriginal Sans, Aboriginal Serif.</strong> Please use these fonts when typing in your language as they have been specially built to represent your language as accurately as possible. </p>
     <h3><a href="http://www.languagegeek.com/font/fontdownload.html">Download the latest version of Aboriginal Sans and Aboriginal Serif</a></h3>
