[kps_kvks] Remove kps and kvks from kps files

--- a/experimental/a/alephwithbeth/source/readme.htm
+++ b/experimental/a/alephwithbeth/source/readme.htm
@@ -16,7 +16,7 @@
 
 <p>A Hebrew keyboard designed to intuitively match the standard QWERTY layout.</p>
 
-<p>© 2023 Cameron Briggs</p>
+<p>© Cameron Briggs</p>
 
 </body>
 </html>
