--- a/release/fv/fv_severn_ojibwa/source/readme.htm
+++ b/release/fv/fv_severn_ojibwa/source/readme.htm
@@ -9,6 +9,9 @@
 <h1>ᐊᓂᔑᓂᓂᒧᐎᐣ (Severn Ojibwa) Keyboard</h1>
 
 <p>This keyboard is designed for the ᐊᓂᔑᓂᓂᒧᐎᐣ (Severn Ojibwa) language of the Eastern Subarctic region of Canada. This is part of a set of keyboards from FirstVoices.</p>
+<p>This keyboard uses a-finals and the left w-dot. For a-finals and right w-dot, see the <a href="www.keyman.com/keyboards/fv_ojibwa_rdot">ᐊᓂᔑᓇᐯᒧᐏᓐ (Ojibwa, right w-dot)</a> keyboard.</p>
+<p>For i-finals, see the <a href="www.keyman.com/keyboards/fv_PLACEHOLDER">NAME (left w-dot)</a> keyboard or the <a href="www.keyman.com/keyboards/fv_PLACEHOLDER">NAME (right w-dot) keyboard.</a></p>
+<p>For Western-finals, see the <a href="www.keyman.com/keyboards/fv_PLACEHOLDER">NAME (left w-dot)</a> keyboard or the <a href="www.keyman.com/keyboards/fv_PLACEHOLDER">MAME (right w-dot) keyboard.</a></p>
 
 </body>
 </html>
