--- a/release/fv/fv_severn_ojibwa/source/readme.htm
+++ b/release/fv/fv_severn_ojibwa/source/readme.htm
@@ -9,7 +9,7 @@
 <h1>ᐊᓂᔑᓂᓂᒧᐎᐣ (Severn Ojibwa, left w-dot) Keyboard</h1>
 
 <p>This keyboard is designed for the ᐊᓂᔑᓂᓂᒧᐎᐣ (Severn Ojibwa) language of the Eastern Subarctic region of Canada. This is part of a set of keyboards from FirstVoices.</p>
-<p>This keyboard uses Western-finals and the left w-dot. For Western-finals and right w-dot, see the <a href="www.keyman.com/keyboards/fv_severn_ojibwa_rdot">ᐊᓂᔑᓇᐯᒧᐏᐣ (Severn Ojibwa, right w-dot)</a> keyboard.</p>
+<p>This keyboard uses Western-finals and the left w-dot. For Western-finals and right w-dot, see the <a href="www.keyman.com/keyboards/fv_severn_ojibwa_rdot">ᐊᓂᔑᓂᓂᒧᐏᐣ (Severn Ojibwa, right w-dot)</a> keyboard.</p>
 <p>For i-finals, see the <a href="www.keyman.com/keyboards/fv_PLACEHOLDER">NAME (left w-dot)</a> keyboard or the <a href="www.keyman.com/keyboards/fv_PLACEHOLDER">NAME (right w-dot)</a> keyboard.</p>
 <p>For a-finals, see the <a href="www.keyman.com/keyboards/fv_ojibwa">ᐊᓂᔑᓇᐯᒧᐎᓐ (Ojibwa, left w-dot)</a> keyboard or the <a href="www.keyman.com/keyboards/fv_ojibwa_rdot">ᐊᓂᔑᓇᐯᒧᐏᓐ (Ojibwa, right w-dot)</a> keyboard.</p>
 
