Updated documentation, added layout images, instructional guide

--- a/release/fv/fv_severn_ojibwa_rdot/source/fv_severn_ojibwa_rdot-help.htm
+++ b/release/fv/fv_severn_ojibwa_rdot/source/fv_severn_ojibwa_rdot-help.htm
@@ -21,7 +21,7 @@ a:active {	color: rgb(102,117,184); text-decoration:none;}
 
     <ul>
 	<li>The on-screen keyboard shows each syllable in their final form and in their e-orientation (consonants), or in their short and long form (vowels).</li>
-	<li>The syllabics used to write ᐊᓂᔑᓂᓂᒧᐏᐣ (Severn Ojibwa) are typed primarily by writing their long-vowel equivalents, with a few exceptions. See <a href=Ojibwa.pdf>this document</a> for a full list of how to type each syllable with this keyboard, and all of the special key combinations.
+	<li>The syllabics used to write ᐊᓂᔑᓂᓂᒧᐏᐣ (Severn Ojibwa) are typed primarily by writing their long-vowel equivalents, with a few exceptions. See <a href=severn_ojibwa_rdot.pdf>this document</a> for a full list of how to type each syllable with this keyboard, and all of the special key combinations.
 		<ul>
 			<li>By typing a single consonant or a key that's assigned to a consonant, the syllable final form will appear on screen. Following the consonant with a vowel will change the syllable final into its full form in the orientation corresponding with the vowel typed.</li>
 				<ul>
@@ -37,7 +37,7 @@ a:active {	color: rgb(102,117,184); text-decoration:none;}
 				</ul>
 			<li>The syllabics sets for sh- / zh- (ᔐᔑᔓᔕᔥ), ch- (ᒉᒋᒍᒐᒡ), and th- (ᕞᕠᕤᕦᕪ) are typed by SHIFT + the first letter of each sound (s, z, and t)</li>
 				<ul>
-					<li><b>ᐊᓂᔑᓂᓂᒧᐏᐣ</b> is typed <b>aniSinabemowin</b> or <b>aniSinapemowin</b></li>
+					<li><b>ᐊᓂᔑᓂᓂᒧᐏᐣ</b> is typed <b>aniSininimowin</b> or <b>aniSininimowin</b></li>
 					<li><b>ᒌᒫᐣ</b> (pointed) is typed <b>Ciimaan</b> or <b>jiimaan</b></li>
 					<li><b>ᒋᒪᐣ</b> (unpointed) is typed <b>Ciman</b> or <b>jiman</b></li>
 				</ul>
@@ -66,7 +66,7 @@ a:active {	color: rgb(102,117,184); text-decoration:none;}
 			<ul>
 				<li><b>.</b> is typed Right-Alt / Option + Period key . </li>
 				<li><b>-</b> is typed Right-Alt / Option + Hyphen key -</li>
-				<li><b>+</b> is typed Shift+Right-Alt / Option + Equal key =</li>
+				<li><b>{</b> is typed Shift+Right-Alt / Option + Left-Bracket key [</li>
 			</ul>
 		<li>All English letters can be typed by pressing <b>Right-Alt / Option </b> followed by the letter(s) you wish to type</li>
 		<li>All uppercase English letters can be typed by pressing <b>Right-Alt / Option</b> followed by the letter(s) you wish ty type</li>
