--- a/release/fv/fv_severn_ojibwa_rdot/source/welcome/welcome.htm
+++ b/release/fv/fv_severn_ojibwa_rdot/source/welcome/welcome.htm
@@ -1,4 +1,4 @@
-!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="utf-8">
@@ -22,7 +22,7 @@ a:active {	color: rgb(102,117,184); text-decoration:none;}
   <tr>
     <td colspan="2"><a href="http://www.firstvoices.com"><img src="FVLogo.gif" width="200" height="48" border="0" /></a>
      
-    <h2><img src="severn_ojibwa_rdot_U_.png" alt="ᐊᓂᔑᓂᓂᒧᐏᐣ" width="514" height="198" /></h2>
+    <h2><img src="fv_severn_ojibwa_rdot_U_.png" alt="ᐊᓂᔑᓂᓂᒧᐏᐣ" width="514" height="198" /></h2>
 					 
 <ul>
 	<li>The on-screen keyboard shows each syllable in their final form and in their e-orientation (consonants), or in their short and long form (vowels).</li>
@@ -38,11 +38,11 @@ a:active {	color: rgb(102,117,184); text-decoration:none;}
 				</ul>
 			<li>To add the w-dot, type the w after the first consonant</li>
 				<ul>
-					<li><b>ᐃᐠᐧᐁ</b> is typed <b>ik[we</b> or <b>ig[we</b></li>
+					<li><b>ᐃᐠᐍ</b> is typed <b>ik[we</b> or <b>ig[we</b></li>
 				</ul>
 			<li>The syllabics sets for sh- / zh- (ᔐᔑᔓᔕᔥ), ch- (ᒉᒋᒍᒐᒡ), and th- (ᕞᕠᕤᕦᕪ) are typed by SHIFT + the first letter of each sound (s, z, and t)</li>
 				<ul>
-					<li><b>ᐊᓂᔑᓂᓂᒧᐏᐣ</b> is typed <b>aniSinabemowin</b> or <b>aniSinapemowin</b></li>
+					<li><b>ᐊᓂᔑᓂᓂᒧᐏᐣ</b> is typed <b>aniSininimowin</b></li>
 					<li><b>ᒌᒫᐣ</b> (pointed) is typed <b>Ciimaan</b> or <b>jiimaan</b></li>
 					<li><b>ᒋᒪᐣ</b> (unpointed) is typed <b>Ciman</b> or <b>jiman</b></li>
 				</ul>
@@ -71,7 +71,7 @@ a:active {	color: rgb(102,117,184); text-decoration:none;}
 			<ul>
 				<li><b>.</b> is typed Right-Alt / Option + Period key . </li>
 				<li><b>-</b> is typed Right-Alt / Option + Hyphen key -</li>
-				<li><b>+</b> is typed Shift+Right-Alt / Option + Equal key =</li>
+				<li><b>{</b> is typed Shift+Right-Alt / Option + Left-Bracket [ key</li>
 			</ul>
 		<li>All English letters can be typed by pressing <b>Right-Alt / Option </b> followed by the letter(s) you wish to type</li>
 		<li>All uppercase English letters can be typed by pressing <b>Right-Alt / Option</b> followed by the letter(s) you wish ty type</li>
