--- a/release/fv/fv_severn_ojibwa_rdot/source/readme.htm
+++ b/release/fv/fv_severn_ojibwa_rdot/source/readme.htm
@@ -8,8 +8,8 @@
 
 <h1>ᐊᓂᔑᓂᓂᒧᐏᐣ (Severn Ojibwa, right w-dot) Keyboard</h1>
 
-<p>This keyboard is designed for the ᐊᓂᔑᓇᐯᒧᐎᓐ (Ojibwa) language of the Eastern Subarctic region of Canada. This is part of a set of keyboards from FirstVoices.</p>
-<p>This keyboard uses a-finals and the right w-dot. For Western-finals and left w-dot, see the <a href="www.keyman.com/keyboards/fv_severn_ojibwa">ᐊᓂᔑᓂᓂᒧᐎᐣ  (Severn Ojibwa, left w-dot)</a> keyboard.</p>
+<p>This keyboard is designed for the ᐊᓂᔑᓂᓂᒧᐏᐣ (Severn Ojibwa) language of the Eastern Subarctic region of Canada. This is part of a set of keyboards from FirstVoices.</p>
+<p>This keyboard uses Western-finals and the right w-dot. For Western-finals and left w-dot, see the <a href="www.keyman.com/keyboards/fv_severn_ojibwa">ᐊᓂᔑᓂᓂᒧᐎᐣ  (Severn Ojibwa, left w-dot)</a> keyboard.</p>
 <p>For i-finals, see the <a href="www.keyman.com/keyboards/fv_PLACEHOLDER">NAME (left w-dot)</a> keyboard or the <a href="www.keyman.com/keyboards/fv_PLACEHOLDER">NAME (right w-dot)</a> keyboard.</p>
 <p>For a-finals, see the <a href="www.keyman.com/keyboards/fv_ojibwa">ᐊᓂᔑᓇᐯᒧᐎᓐ (Ojibwa, left w-dot)</a> keyboard or the <a href="www.keyman.com/keyboards/fv_ojibwa_rdot">ᐊᓂᔑᓇᐯᒧᐏᓐ (Ojibwa, right w-dot)</a> keyboard.</p>
 
