Removed unnecessary image files & updated PHP

--- a/release/w/way/source/welcome.htm
+++ b/release/w/way/source/welcome.htm
@@ -22,7 +22,7 @@
   </head>
   <body>
 
-    <h1> <img src='way.ico' alt='Wayana Keyboard Icon'> Start Using Wayana</h1>
+    <h1>Start Using Wayana</h1>
 
     <p>
       QWERTY-based keyboard for the Wayana language in Suriname and Brazil.
