[sil_cipher_music] Update keyboard to support figure dash

--- a/release/sil/sil_cipher_music/source/welcome/welcome.htm
+++ b/release/sil/sil_cipher_music/source/welcome/welcome.htm
@@ -262,7 +262,10 @@ overdot <!-- Truly making underdot and overdot intuitive for Chinese would requi
 :	 </span><span lang="ca-ES">&#119041;</span><span lang="hr-HR"> </span><span lang="ca-ES">&#119043;
 &#119042; &#119046; &#119047;  </span></font>
 </p>
-
+<p class="western" style="margin-bottom: 0in"><a name="__DdeLink__1967_1727085788"></a>
+	<font face="Doulos SIL Cipher"><span lang="hr-HR">SHIFT + </span><span lang="en-US">_</span>  :	 </span><span lang="ca-ES">&#119041;</span><span lang="hr-HR"> </span><span lang="ca-ES">&#2012; (figure dash)</span></font>
+  </p>
+  
 <h4>Other instructions</h4>
 <p class="western" style="margin-bottom: 0in">  <font face="Doulos SIL Cipher"><span lang="en-US">Q
 QQ, q qq, X XX, x xx, Z ZZ, z zz</span><span lang="hr-HR"> :	</span><span lang="ca-ES">&#42891;
