--- a/release/fv/fv_ojibwa_rdot/source/readme.htm
+++ b/release/fv/fv_ojibwa_rdot/source/readme.htm
@@ -10,7 +10,7 @@
 
 <p>This keyboard is designed for the ᐁᓂᔑᓇᐯᒧᐏᓐ (Ojibwa) language of the Eastern Subarctic region of Canada. This is part of a set of keyboards from FirstVoices.</p>
 <p>This keyboard uses a-finals and the right w-dot. For a-finals and left w-dot, see the <a href="www.keyman.com/keyboards/fv_ojibwa"> ᐊᓂᔑᓇᐯᒧᐎᓐ (Ojibwa, a-finals, left w-dot)</a> keyboard.</p>
-<p>For i-finals, see the <a href="www.keyman.com/keyboards/fv_PLACEHOLDER">NAME (left w-dot)</a> keyboard or the <a href="www.keyman.com/keyboards/fv_PLACEHOLDER">NAME (right w-dot)</a> keyboard.</p>
+<p>For i-finals, see the <a href="www.keyman.com/keyboards/fv_ojibwa_ifinal">ᐊᓂᔑᓇᐯᒧᐎᣙ (Ojibwa, i-finals, left w-dot)</a> keyboard or the <a href="www.keyman.com/keyboards/fv_ojibwa_ifinal_rdot">ᐊᓂᔑᓇᐯᒧᐏᣙ (Ojibwa, i-finals, right w-dot)</a> keyboard.</p>
 <p>For Western-finals, see the <a href="www.keyman.com/keyboards/fv_severn_ojibwa"> ᐊᓂᔑᓂᓂᒧᐎᐣ (Severn Ojibwa, left w-dot)</a> keyboard or the <a href="www.keyman.com/keyboards/fv_severn_ojibwa_rdot"> ᐊᓂᔑᓂᓂᒧᐏᐣ (Severn Ojibwa, right w-dot)</a> keyboard.</p>
 
 </body>
