Standardising keyboard name throughout documentation

--- a/release/fv/fv_ojibwa/source/fv_ojibwa-help.htm
+++ b/release/fv/fv_ojibwa/source/fv_ojibwa-help.htm
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>ᐊᓂᔑᓇᐯᒧᐎᓐ (Ojibwa, left w-dot) Keyboard Layout</title>
+  <title>ᐊᓂᔑᓇᐯᒧᐎᓐ (Ojibwa, a-finals, left w-dot) Keyboard Layout</title>
 
 <style type="text/css"> <!--
 li {font-size: medium; margin-bottom: 5px; font-family: "Aboriginal Sans"; }
