--- a/release/fv/fv_ojibwa/source/readme.htm
+++ b/release/fv/fv_ojibwa/source/readme.htm
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
   <meta charset="utf-8">
-  <title>ᐊᓂᔑᓇᐯᒧᐎᓐ (Ojibwa, left w-dot) Keyboard</title>
+  <title>ᐊᓂᔑᓇᐯᒧᐎᓐ (Ojibwa, a-finals, left w-dot) Keyboard</title>
     <link rel="stylesheet" href="style.css" type="text/css" />
 </head>
 <body>
 
-<h1>ᐊᓂᔑᓇᐯᒧᐎᓐ (Ojibwa, left w-dot) Keyboard</h1>
+<h1>ᐊᓂᔑᓇᐯᒧᐎᓐ (Ojibwa, a-finals, left w-dot) Keyboard</h1>
 
 <p>This keyboard is designed for the ᐊᓂᔑᓇᐯᒧᐎᓐ (Ojibwa) language of the Eastern Subarctic region of Canada. This is part of a set of keyboards from FirstVoices.</p>
-<p>This keyboard uses a-finals and the left w-dot. For a-finals and right w-dot, see the <a href="www.keyman.com/keyboards/fv_ojibwa_rdot">ᐊᓂᔑᓇᐯᒧᐏᓐ (Ojibwa, right w-dot)</a> keyboard.</p>
+<p>This keyboard uses a-finals and the left w-dot. For a-finals and right w-dot, see the <a href="www.keyman.com/keyboards/fv_ojibwa_rdot">ᐊᓂᔑᓇᐯᒧᐏᓐ (Ojibwa, a-finals, right w-dot)</a> keyboard.</p>
 <p>For i-finals, see the <a href="www.keyman.com/keyboards/fv_ojibwa_ifinal">ᐊᓂᔑᓇᐯᒧᐎᣙ (Ojibwa, i-finals, left w-dot)</a> keyboard or the <a href="www.keyman.com/keyboards/fv_ojibwa_ifinal_rdot">ᐊᓂᔑᓇᐯᒧᐏᣙ (Ojibwa, i-finals, right w-dot)</a> keyboard.</p>
 <p>For Western-finals, see the <a href="www.keyman.com/keyboards/fv_severn_ojibwa">ᐊᓂᔑᓂᓂᒧᐎᐣ (Severn Ojibwa, left w-dot)</a> keyboard or the <a href="www.keyman.com/keyboards/fv_severn_ojibwa_rdot">ᐊᓂᔑᓂᓂᒧᐏᐣ (Severn Ojibwa, right w-dot)</a> keyboard.</p>
 
