corrected OSK, typos

--- a/release/fv/fv_severn_ojibwa/source/fv_severn_ojibwa-help.htm
+++ b/release/fv/fv_severn_ojibwa/source/fv_severn_ojibwa-help.htm
@@ -69,7 +69,7 @@ a:active {	color: rgb(102,117,184); text-decoration:none;}
 				<li><b>+</b> is typed Shift+Right-Alt / Option + Equal key =</li>
 			</ul>
 		<li>All English letters can be typed by pressing <b>Right-Alt / Option </b> followed by the letter(s) you wish to type</li>
-		<li>All uppercase English letters can be typed by pressing <b>Right-Alt / Option</b> followed by the letter(s) you wish ty type</li>
+		<li>All uppercase English letters can be typed by pressing <b>Right-Alt / Option</b> followed by the letter(s) you wish to type</li>
 
     <hr></td>
   </tr>
