--- a/release/fv/fv_severn_ojibwa/source/welcome/welcome.htm
+++ b/release/fv/fv_severn_ojibwa/source/welcome/welcome.htm
@@ -74,7 +74,7 @@ a:active {	color: rgb(102,117,184); text-decoration:none;}
 				<li><b>+</b> is typed Shift+Right-Alt / Option + Equal key =</li>
 			</ul>
 		<li>All English letters can be typed by pressing <b>Right-Alt / Option </b> followed by the letter(s) you wish to type</li>
-		<li>All uppercase English letters can be typed by pressing <b>Right-Alt / Option</b> followed by the letter(s) you wish ty type</li>
+		<li>All uppercase English letters can be typed by pressing <b>Right-Alt / Option</b> followed by the letter(s) you wish to type</li>
 
 		<h2>Unicode Fonts</h2>
 						<p>The following fonts have been installed on your computer: <strong>Aboriginal Sans, Aboriginal Serif.</strong> Please use these fonts when typing in your language as they have been specially built to represent your language as accurately as possible. </p>
