--- a/release/fv/fv_severn_ojibwa_rdot/source/welcome/welcome.htm
+++ b/release/fv/fv_severn_ojibwa_rdot/source/welcome/welcome.htm
@@ -62,7 +62,7 @@ a:active {	color: rgb(102,117,184); text-decoration:none;}
 		<li>A standalone above dot indicating vowel length can be typed with the Backquote key `</li>
 		<li>A standalone w-dot can be typed with the q key.</li>
 			<ul>
-				<li><b>NOTE:</b> the dot indicating a long vowel and the w-dot do not need to be typed for the majority of syllables on the keyboard. They are provided as an option for syllables that do not have a single character that contains the syllable and one or both dots, ie; ᐧᕙ</li>
+				<li><b>NOTE:</b> the dot indicating a long vowel and the w-dot do not need to be typed for the majority of syllables on the keyboard. They are provided as an option for syllables that do not have a single character that contains the syllable and one or both dots, ie; ᕙᐧ</li>
 			</ul>
 		<li><b>᙮</b> is typed with the period key .</li>
 		<li>single guillement: ‹ Right-Alt+Semicolon key ; — › Right-Alt+Quote '</li>
@@ -74,7 +74,7 @@ a:active {	color: rgb(102,117,184); text-decoration:none;}
 				<li><b>{</b> is typed Shift+Right-Alt / Option + Left-Bracket [ key</li>
 			</ul>
 		<li>All English letters can be typed by pressing <b>Right-Alt / Option </b> followed by the letter(s) you wish to type</li>
-		<li>All uppercase English letters can be typed by pressing <b>Right-Alt / Option</b> followed by the letter(s) you wish ty type</li>
+		<li>All uppercase English letters can be typed by pressing <b>Right-Alt / Option</b> followed by the letter(s) you wish to type</li>
 
 		<h2>Unicode Fonts</h2>
 						<p>The following fonts have been installed on your computer: <strong>Aboriginal Sans, Aboriginal Serif.</strong> Please use these fonts when typing in your language as they have been specially built to represent your language as accurately as possible. </p>
