--- a/release/fv/fv_severn_ojibwa/source/welcome/welcome.htm
+++ b/release/fv/fv_severn_ojibwa/source/welcome/welcome.htm
@@ -50,10 +50,10 @@ a:active {	color: rgb(102,117,184); text-decoration:none;}
 	</li>
 	<li>In the case of a vowel immediately after a syllable final or two vowels that need to be side by side, use the <b>left bracket key [ </b> to keep the syllables separate
 		<ul>
-			<li><b>ᐊᒸᑲᓂᐎᐟ ᐊᐊ</b> (pointed) is typed <b>amwaakaniwit a[a</b></li>
-			<li><b>ᐊᒶᑲᓂᐎᐟ ᐊᐊ</b> (unpointed) is typed <b>amwakaniwit a[a</b></li>
-			<li><b>ᐋᓃᐡ ᐁᐡᓂᑳᐢᣞᐃᐣ</b> (pointed) is typed <b>aaniiZ eZnikaazy[in</b> or <b>aaniiS eSnigaasy[in</b></li>
-			<li><b>ᐊᓃᐡ ᐁᐡᓂᑲᐢᣞᐃᐣ</b> (unpointed) is typed <b>aniZ eZnikazy[in</b> or <b>aniS eSnigasy[in</b></li>
+			<li><b>ᐋ</b>is typed <b>aa</b></li>
+			<li><b>ᐊᐊ</b>is typed <b>a[a</b></li>
+			<li><b>ᐃᑴ</b> (pointed) is typed <b>ikwe</b> or <b>igwe</b></li>
+			<li><b>ᐃᐠᐌ</b> (pointed) is typed <b>ik[we</b> or <b>ig[we</b></li>
 		</ul>
 	</li>
 	<p></p>
