--- a/release/fv/fv_severn_ojibwa/source/welcome/welcome.htm
+++ b/release/fv/fv_severn_ojibwa/source/welcome/welcome.htm
@@ -22,7 +22,7 @@ a:active {	color: rgb(102,117,184); text-decoration:none;}
   <tr>
     <td colspan="2"><a href="http://www.firstvoices.com"><img src="FVLogo.gif" width="200" height="48" border="0" /></a>
      
-    <h2><img src="severn_ojibwaU_.png" alt="ᐊᓂᔑᓂᓂᒧᐎᐣ" width="514" height="198" /></h2>
+    <h2><img src="severn_ojibwa_U_.png" alt="ᐊᓂᔑᓂᓂᒧᐎᐣ" width="514" height="198" /></h2>
 					 
 <ul>
 	<li>The on-screen keyboard shows each syllable in their final form and in their e-orientation, or in their short and long form (vowels).</li>
