standardized name throughout documentation, added additional info about mobile layout

--- a/release/fv/fv_diitiidatx/source/fv_diitiidatx_kmw_help.htm
+++ b/release/fv/fv_diitiidatx/source/fv_diitiidatx_kmw_help.htm
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Diitiidʔatx̣</title>
+  <title>Diidiitidq</title>
 
 <style type="text/css"> <!--
 li {font-size: medium; margin-bottom: 5px; font-family: "Aboriginal Sans"; }
