--- a/release/t/taigi_telex/source/welcome.htm
+++ b/release/t/taigi_telex/source/welcome.htm
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <title>Start Using Taigi Telex</title>
   <style type="text/css">
-    p { font: 10pt Tahoma; }
+    p { font: 12pt Tahoma; }
     h1 { font: bold 16pt Tahoma; color: #4444cc; margin-bottom: 2px }
     h2 { font: bold 12pt Tahoma; color: #4444cc; }
   </style>
@@ -14,34 +14,41 @@
 <h1>Start Using Taigi Telex</h1>
 
 <p>
-    Taigi Telex for Tâi-gí (Taiwanese) pe̍h-ōe-jī.
+    Taigi Telex 2.0 for Tâi-gí (Taiwanese) pe̍h-ōe-jī. 台語telex 2.0 會當拍台語白話字
 </p>
-
 <p>
-    rules: <br>
-    <li> 2=d, 3=q, 5=w, 7=x, 8=x, 9=v, ⁿ=nn, o͘=oo</li>
-    examples: <br>
-    <li> ad > á, aq > à, ax > ā, aw > â, ahx > a̍h</li>
-    shortcut: <br>
-    <li> aa > â, ee > ê, uu > û, ii > î</li>
-    doubletaping leads to generate original letters: <br>
-    <li> example: fix = fixx, did = didd, kann = kannn, law = laww, bee = beee
+Taigi Telex version 2.0, is using "sfwxv" keys for generating tone marks 
+</p>
+<p>
+    台語telex 2.0版本，佇咧元音字母後爿抑是佇咧每一個音節後爿添字母‘s’ ‘f’ ‘w’ ‘x’佮‘v’ 去生成音調 
+</p>
+<p>
+   佮數字音調表示方法ê相應規則 rules: </p>
+    <p> 2=s, 3=f, 5=w, 7=x, 8=x, 9=v</p>
+  <p> 例 examples: </p>
+    <p> as > á, af= > à, ax > ā, aw > â, ahx > a̍h, av > ă</p>
+  <p>  shortcut: </p>
+    <p> aa > â, ee > ê, uu > û, ii > î</p>
+   <p> 特別ê字母specific letters: </p>
+    <p> nn > ⁿ , oo > o͘</p>
+  <p>  拍兩次字母，取消音調，產生原本ê字母 doubletaping leads to generate original letters: </p>
+    <p> 例example: fix = fixx,  kann = kannn, law = laww, bee = beee
 
 </p>
 
-<h2>Desktop Keyboard Layout</h2>
+<!-- <p>See <a href="file:taigi_poj.pdf">this document</a> for all the key combinations.</p> -->
 
-<h3>Unshifted</h3>
+<h1>Keyboard Layout</h1>
+
+<p><b>Unshifted</b></p>
 <img src='taigitelexU_.png' alt='Keyboard Layout'>
-<h3>Shifted</h3>
+<p><b>Shifted</b></p>
 <img src='taigitelexU_S.png' alt='Keyboard Layout'>
-<h2>Phone Layout</h2>
-
-<h3>Phone Default</h3>
+<p><b>Phone Default</b></p>
 <img src='taigitelex_.png' alt='Keyboard Layout'>
-<h3>Phone Shifted</h3>
+<p><b>Phone Shifted</b></p>
 <img src='taigitelex_S.png' alt='Keyboard Layout'>
-<h3>Phone Numeric</h3>
+<p><b>Phone Numeric</b></p>
 <img src='taigitelex_N.png' alt='Keyboard Layout'>
 
 
