--- a/release/t/taigi_telex/source/readme.htm
+++ b/release/t/taigi_telex/source/readme.htm
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Taigi Telex</title>
+  <title>Taigi_telex</title>
   <style type="text/css">
     p { font: 10pt Tahoma; }
     h1 { font: bold 16pt Tahoma; color: #4444cc; margin-bottom: 2px }
@@ -12,13 +12,17 @@
 </head>
 <body>
 
-<h1>Taigi Telex</h1>
+<h1>Taigi_telex</h1>
 
 <p>
-  Taigi Telex for Tâi-gí (Taiwanese) pe̍h-ōe-jī. 
+    Taigi_telex 2.0 generated from template.
 </p>
 
+<p>© cathaylab 2024-2024</p>
+
 <p> e-mail: goetiansoc@proton.me</p>
-<p> telegram group: https://t.me/+w-ftmJaA4xkyNzI8</p>
+<p> telegram: https://t.me/cathaylab</p>
+<p> instagram: cathay_lab2024</p>
+
 </body>
 </html>
