tidied documentation and code, updated README.md to remove TODO and updated history

--- a/release/fv/fv_diitiidatx/source/fv_diitiidatx_kmw_help.htm
+++ b/release/fv/fv_diitiidatx/source/fv_diitiidatx_kmw_help.htm
@@ -19,17 +19,15 @@ a:active {	color: rgb(102,117,184); text-decoration:none;}
 
 <body>
 <table width="100%" border="0" cellpadding="0">
-			<tr>
+<tr>
     <td colspan="2">
-					<ul>
-						<li>
-      To type the glottal accent ’ use the Apostrophe key ’ — k̓ is typed k then Apostrophe. </li>
-						<li>The original English punctuation keys can be typed by holding down the Ctrl+Alt or Option key. The Left- Bracket [ is typed Ctrl+Alt+Left-Bracket (Windows) Option+Left-Bracket (Mac).</li>
-					 
-					</ul>
-				</td>
-  </tr>
-		</table>
+		<ul>
+			<li>To type the glottal accent ’ use the Apostrophe key ’ — k̓ is typed k then Apostrophe. </li>
+			<li>The original English punctuation keys can be typed by holding down the Ctrl+Alt or Option key — the Left-Bracket [ is typed Ctrl+Alt+Left-Bracket (Windows) Option+Left-Bracket (Mac).</li>
+		</ul>
+	</td>
+</tr>
+</table>
 
 </body>
 </html>
