feat(sil_greek_polytonic): alternate keying methods for sigma and isolated vowels
v1.7:
* Add AltGr+S for enforced medial sigma
* Add AltGr plus A, E, I, O, U, J, or W for isolated vowels/rho without breathing marks

Fixes: #1936

--- a/release/sil/sil_greek_polytonic/source/welcome/welcome.htm
+++ b/release/sil/sil_greek_polytonic/source/welcome/welcome.htm
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="utf-8">
@@ -144,6 +144,8 @@ table+table {margin-top: 1.0em;}
 
 <p>The keyboard automatically chooses the correct code for the <em>sigma</em> depending upon the encoding and the context, so the correct final form is used when appropriate.</p>
 
+<p>When editing text, you may find you need to insert a medial sigma in the middle of a word; this can typed with <b class="input">AltGr+S</b>.</p>
+
 <table class="inputSequences">
     <tbody>
         <tr class="glyphs">
@@ -214,6 +216,7 @@ table+table {margin-top: 1.0em;}
 <p>For example, to type <span lang="grc">Οὐκ εἰμι ἐγω ὁ Χριστος. (ΙΩΑΝΝΗΝ 3 28)</span> you only need to press the following keys:<br>
 <b class="input">O u k SPACE e i m i SPACE e g w SPACE h o SPACE C r i s t o s PERIOD SPACE ( I W A N N J N SPACE 3 : 2 8 )</b></p>
 
+<p>You can use <b class="input">AltGr+vowel</b> to get an isolated lower case vowel or <em>rho</em> without breathing marks.</p>
 <p>You can also press <b class="input">*</b> to remove the breathing mark from a vowel or <em>rho</em>.</p>
 <p>In a few words, a vowel with <em>dieresis</em> follows an accented vowel. You will need to type <b class="input">@</b> before
 the vowel with <em>dieresis<em> to get the right behavior. For example, to get <span lang="grc">Ἰάϊρος</span>, type <b class="input">Ia/@i"ros</b>.</p>
