Edit keyboard functionality and adjust project version/copyright info

--- a/release/a/arbore/source/readme.htm
+++ b/release/a/arbore/source/readme.htm
@@ -15,10 +15,10 @@
 <h1>Arbore</h1>
 
 <p>
-  A modified version of the <a href="https://keyman.com/keyboards/sil_el_ethiopian_latin" target="_blank">"SIL EL - Ethiopian Latin"</a> keyboard (version 1.4.1), tailored to suit the Arbore language.
+  A QWERTY-based keyboard for the Arbore language of Southwestern Ethiopia.
 </p>
 
-<p>Copyright © SIL International 2024</p>
+<p>© SIL International</p>
 
 </body>
 </html>
