tidied documentation, styled table

--- a/release/fv/fv_smalgyax/source/fv_smalgyax_kmw_help.htm
+++ b/release/fv/fv_smalgyax/source/fv_smalgyax_kmw_help.htm
@@ -23,9 +23,9 @@ a:active {	color: rgb(102,117,184); text-decoration:none;}
     <td colspan="2">
 					<ul>
 						<li>To type the underline accent use the Semicolon key ; — ḵ is typed k then Semicolon ;</li>
-						<li>All changed punctuation can type their original value by holding down the Right-Alt or Option key. The Semicolon ; is typed Right-Alt+Semicolon (Windows) Option+Semicolon (Mac).</li>
+						<li>All changed punctuation can type their original value by holding down the Right-Alt or Option key — the Semicolon ; is typed Right-Alt+Semicolon (Windows) Option+Semicolon (Mac).</li>
 					</ul>
-						</td>
+		</td>
   </tr>
 </table>
 
