--- a/release/fv/fv_stlatlimxec/source/welcome/welcome.htm
+++ b/release/fv/fv_stlatlimxec/source/welcome/welcome.htm
@@ -25,12 +25,14 @@ a:active {	color: rgb(102,117,184); text-decoration:none;}
     <h2><img src="Stlatlimxec.png" alt="" height="198" width="514" border="0" /></h2>
 					<ul>
 						<li>The special characters of Sƛ̓áƛ̓imxec have been assigned to the number keys. To type the numerals, hold down the Right-Alt or Option key then press the appropriate number key. The Numeric keypad on the right side of many keyoards keep its original numbers</li>
-						<li>All accents are typed after the base character: á is typed a then Semicolon ;</li>
-						<li>To type the acute accent use the Semicolon key ; — é is typed e then Semicolon ;</li>
-						<li>To type the apostrophe accent use the apostrophe key ' — k̓ is typed k then Apostrophe '<br />
-							The ƛ̓ automatically types the glottal accent in one keystroke.</li>
-						<li>To type the under-dot accent use the number 1 key — c̣ is typed c then 1<br />
-							The x̣ character has its own key 7. <br />
+						<li>All accents are typed after the base character: á is typed a then Semicolon ;
+							<ul>
+								<li>To type the acute accent use the Semicolon key ; — é is typed e then Semicolon ;</li>
+								<li>To type the apostrophe accent use the apostrophe key ' — k̓ is typed k then Apostrophe '<br />
+									The ƛ̓ automatically types the glottal accent in one keystroke.</li>
+								<li>To type the under-dot accent use the number 1 key — c̣ is typed c then 1<br />
+									The x̣ character has its own key 7. <br /></li>
+							</ul>
 						</li>
 						<li>To type the grave accent use the backquote key ` — à is typed a then Backquote `<br />
 							This accent is occasionally used for linguistic purposes. </li>
