settled on a mobile layout, tidied documentation, bumped version

--- a/release/fv/fv_ktunaxa/source/welcome/welcome.htm
+++ b/release/fv/fv_ktunaxa/source/welcome/welcome.htm
@@ -26,7 +26,7 @@ a:active {	color: rgb(102,117,184); text-decoration:none;}
 					<ul>
 						<li>The special characters of Ktunaxa have been assigned to the unshifted number keys. To type the numerals, hold down the shift key then press the appropriate number key. The Numeric keypad on the right side of many keyboards keep its original numbers.</li>
 						<li>To type the Glottal Accent, use the Apostrophe key '  —  p̓ is typed p then apostrophe</li>
-						<li>You can type the English value of the punctuation keys by holding down the Right-Alt or Option key. The Semicolon ; is typed Right-Alt+Semicolon (Windows) Option+Semicolon (Mac). The punctuation on the number keys (such as @ # $...) is accessed with the Right-Alt or Option key.</li>
+						<li>You can type the English value of the punctuation keys by holding down the Right-Alt or Option key — the Semicolon ; is typed Right-Alt+Semicolon (Windows) Option+Semicolon (Mac). The punctuation on the number keys (such as @ # $...) is accessed with the Right-Alt or Option key.</li>
 						<li>Opening and closing quotes. For Mac users, Right-Alt is either of the Option Keys.
 							<ul>
 								<li>single: ‘ Backquote — ’ Zero</li>
