--- a/release/fv/fv_dane_zaa_zaage/source/welcome.htm
+++ b/release/fv/fv_dane_zaa_zaage/source/welcome.htm
@@ -29,6 +29,10 @@
 
 <p>By holding the ALT key, you can return to the standard US English keyboard value of any modified key (such as <strong>p, r, q, v, x</strong>, and various punctuation). Shift-Alt will give you the standard English shifted value of the modified key (such as <strong>P, R, Q, V, Z</strong>, etc).</p>
 
+<h2>Unicode Fonts</h2>
+	<p>The following fonts have been installed on your computer: <strong>Aboriginal Sans, Aboriginal Serif.</strong> Please use these fonts when typing in your language as they have been specially built to represent your language as accurately as possible. </p>
+  <h3><a href="http://www.languagegeek.com/font/fontdownload.html">Download the latest version of Aboriginal Sans and Aboriginal Serif</a></h3>
+
 <h2>Mobile/Tablet Touch Layout</h2>
 <img src="fv_dane_zaa_zaage_T.png">
 
@@ -47,7 +51,7 @@
   <li>z > z̲ (Z̲)</li>
 </ul>
 
-<p>© 2015-2023 FirstVoices, First Peoples' Cultural Foundation, SIL International</p>
+<p>© 2015-2024 FirstVoices, First Peoples' Cultural Foundation, SIL International</p>
 
 </body>
 </html>
