--- a/release/fv/fv_dene_dzage/source/fv_dene_dzage-help.htm
+++ b/release/fv/fv_dene_dzage/source/fv_dene_dzage-help.htm
@@ -28,7 +28,7 @@ a:active {	color: rgb(102,117,184); text-decoration:none;}
 <p>The Dene Dzage keyboard uses the English keyboard as a base, with added key combinations in order to create special characters. See <a href="file:fv_dene_dzage_combinations.pdf">this document</a> for all the special key combinations.</p>
 <p>
 </p>
-<p>Typing a single punctuation mark followed by a vowel (without a space in between) will type the vowel with a high, rising, or falling tone, the nasal hook, or a long vowel.</p>
+<p>Typing a single punctuation mark followed by a vowel (without a space in between) will type the vowel with a high, rising, or falling tone, the nasal hook, or a long vowel.
   <ul>
     <li><b>Backquote `</b> plus a vowel becomes a high toned vowel</li>
       <ul>
@@ -55,6 +55,7 @@ a:active {	color: rgb(102,117,184); text-decoration:none;}
         <li><b>=a</b> becomes <b>ā́</b></li>
       </ul>
   </ul>
+</p>
 <p>Typing two of a punctuation mark followed by a vowel (without a space in between) will type a a high, rising, or falling tone, or a long vowel, <b>with</b> a nasal hook.</p>
   <ul>
     <li><b>Two Backquotes ``</b> plus a vowel becomes a nasal high toned vowel</li>
