--- a/release/fv/fv_dene_dzage/source/welcome/welcome.htm
+++ b/release/fv/fv_dene_dzage/source/welcome/welcome.htm
@@ -28,53 +28,64 @@ a:active {	color: rgb(102,117,184); text-decoration:none;}
 <p></p>
 <p>Typing a single punctuation mark followed by a vowel (without a space in between) will type the vowel with a high, rising, or falling tone, the nasal hook, or a long vowel.</p>
   <ul>
-    <li><b>Backquote `</b> plus a vowel becomes a high toned vowel</li>
+    <li><b>Backquote `</b> plus a vowel becomes a high toned vowel
       <ul>
         <li><b>`a</b> becomes <b>á</b></li>
       </ul>
-    <li><b>Semicolon ;</b> plus a vowel becomes a long vowel</li>
+    </li>
+    <li><b>Semicolon ;</b> plus a vowel becomes a long vowel
       <ul>
         <li><b>;e</b> becomes <b>ē</b></li>
       </ul>
-    <li><b>Left Bracket [</b> plus a vowel becomes a vowel with rising tone</li>
+    </li>
+    <li><b>Left Bracket [</b> plus a vowel becomes a vowel with rising tone
       <ul>
         <li><b>[i</b> becomes <b>ǐ</b></li>
       </ul>
-    <li><b>Right Bracket ]</b> plus a vowel becomes a vowel with falling tone</li>
+    </li>
+    <li><b>Right Bracket ]</b> plus a vowel becomes a vowel with falling tone
       <ul>
         <li><b>[o</b> becomes <b>ô</b></li>
       </ul>
-    <li><b>Comma ,</b> plus a vowel becomes a vowel with nasal hook</li>
+    </li>
+    <li><b>Comma ,</b> plus a vowel becomes a vowel with nasal hook
       <ul>
         <li><b>,u</b> becomes <b>ų</b></li>
       </ul>
-    <li><b>Equal Sign =</b> plus a vowel becomes the combined long vowel with high tone</li>
+    </li>
+    <li><b>Equal Sign =</b> plus a vowel becomes the combined long vowel with high tone
       <ul>
         <li><b>=a</b> becomes <b>ā́</b></li>
       </ul>
+    </li>
   </ul>
 <p>Typing two of a punctuation mark followed by a vowel (without a space in between) will type a a high, rising, or falling tone, or a long vowel, <b>with</b> a nasal hook.</p>
   <ul>
-    <li><b>Two Backquotes ``</b> plus a vowel becomes a nasal high toned vowel</li>
+    <li><b>Two Backquotes ``</b> plus a vowel becomes a nasal high toned vowel
       <ul>
         <li><b>``e</b> becomes <b>ę́</b></li>
       </ul>
-    <li><b>Two Semicolons ;;</b> plus a vowel becomes a nasal long vowel</li>
+    </li>
+    <li><b>Two Semicolons ;;</b> plus a vowel becomes a nasal long vowel
       <ul>
         <li><b>;;o</b> becomes <b>ǭ</b></li>
       </ul>
-    <li><b>Two Left Brackets [[</b> plus a vowel becomes a nasal rising tone vowel</li>
+    </li>
+    <li><b>Two Left Brackets [[</b> plus a vowel becomes a nasal rising tone vowel
       <ul>
         <li><b>[[a</b> becomes <b>ą̌ </b></li>
       </ul>
-    <li><b>Two Right Brackets ]]</b> plus a vowel becomes a nasal falling tone vowel</li>
+    </li>
+    <li><b>Two Right Brackets ]]</b> plus a vowel becomes a nasal falling tone vowel
       <ul>
         <li><b>]]e</b> becomes <b>ę̂</b></li>
       </ul>
-    <li><b>Two Equal Signs ==</b> plus a vowel becomes a long, nasal high tone vowel</li>
+    </li>
+    <li><b>Two Equal Signs ==</b> plus a vowel becomes a long, nasal high tone vowel
       <ul>
         <li><b>==o</b> becomes <b>ǭ́</b>
       </ul>
+    </li>
   </ul>
 <p>Other Combinations</p>
   <ul>
@@ -88,7 +99,6 @@ a:active {	color: rgb(102,117,184); text-decoration:none;}
 						<p>The following fonts have been installed on your computer: <strong>Aboriginal Sans, Aboriginal Serif.</strong> Please use these fonts when typing in your language as they have been specially built to represent your language as accurately as possible. </p>
     <h3><a href="http://www.languagegeek.com/font/fontdownload.html">Download the latest version of Aboriginal Sans and Aboriginal Serif</a></h3>
     <hr></td>
-  </tr>
 
 <tr>
   <td style="padding: 15px" valign="middle"><a href="https://keyman.com/"><img src="keyman.png" height="31"  border="0"/></a></td>
